--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
     machine:
       image: ubuntu-2004:202010-01
     environment:
-      - FRONT_IMAGE: 'tekine/web'
-      - APP_IMAGE: 'tekine/application'
+      - FRONT_IMAGE: 'tuimac/web'
+      - APP_IMAGE: 'tuimac/application'
       - CI: ""
     steps:
       - checkout
@@ -75,7 +75,7 @@ jobs:
             aws ssm send-command \
               --targets Key=tag:Deploy,Values=yes \
               --document-name 'AWS-RunShellScript' \
-              --parameters 'commands=/home/ec2-user/tekine/docker/prod/deploy.sh'
+              --parameters 'commands=/home/ec2-user/react-django/docker/prod/deploy.sh'
 workflows:
   version: 2.1
   react-django:
