--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     ports:
       - 80:80
     environment:
-      - DB_PASSWORD=password
+      - DB_PASSWORD=keikakuin1
     networks:
       - react-django
 networks:
