--- a/docker/dev/web-app/Dockerfile
+++ b/docker/dev/web-app/Dockerfile
@@ -13,8 +13,8 @@ RUN apk update && \
     apk upgrade && \
     apk add --no-cache bash git python3 python3-dev py3-pip nodejs npm curl tree nginx mysql-client gcc g++ mariadb-dev && \
     pip3 install -r requirements.txt && \
-    git clone https://github.com/tuimac/react-django && \
-    cd /root/react-django/src/frontend && \
+    git clone https://github.com/this-ken/tekine && \
+    cd /root/tekine/src/frontend && \
     npm install && \
     npm update --force
 
